# testtask

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  compose.yaml  init_db.sql  pyproject.toml
assetsrates/: app.py  json.py  pubsub.py  ratescrawler.py  storage.py  websockets.py
requirements/: dev.in  dev.txt  main.in  main.txt
tests/: test_assetsrates.py  test_pubsub.py
